[ASP-2210] Harden License Manage data model (#220)
* Update table schemas

* Remove databases from storage

* Update table schemas to include unique fields

* Refactor application schemas

* Update table schemas to change mapping

* Rename old migrations

* Create new migration

* Create database module

* Create license_server module

* Add license_server router

* Remove v1 prefix from API

* Add docstrings to license_server module

* Add everything done so far

* Create models folder

* Update schemas

* Add CRUDs

* Update database module

* Update API schemas

* Remove unused files

* Move old API to old folder

* Move utils to database module

* Add license_server router

* Update license_server CRUD to use async session

* Update license_server schemas

* Add license_server CRUD routes

* Lint code

* Change get_session method

* Remove unused file

* Lint code

* Create generic CRUD model

* Create license servers routes

* Create cluster module

* Add base classes for schemas

* Update license server schemas to use base schemas

* Include cluster router to API

* Update cluster model

* Save everything

* Create CRUD module

* Move models to the same file

* Fix relationships in models

* Update schemas

* Add routes for license servers

* Add crud for license servers

* Add everything

* Reorganize project

* Update relationships in models

* Update generic CRUD

* Add routers

* Update schemas

* Update clusters routes to use generic CRUD

* Update configurations routes to use generic CRUD

* Add inventories routes

* Remove unused routes from license servers

* Add search to read_all endpoints

* Remove unused CRUDs

* Lint code

* Change session to async scoped session

* Change order of routers

* Add sorting to the API

* Create inventory when feature is created

* Read and delete jobs by slurm_job_id

* Move reserved from config t

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -10,8 +10,10 @@ install:
 	poetry install
 
 .PHONY: test
-test: install
-	poetry run pytest
+test:
+	docker-compose build migration
+	docker-compose build unittest
+	docker-compose run --rm unittest
 
 .PHONY: mypy
 mypy: install
