--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,8 +20,7 @@ asyncpg = "^0.24.0"
 uvicorn = "^0.15.0"
 python-dotenv = "^0.19.0"
 armasec = "^0.11"
-SQLAlchemy = "^1.4.29"
-databases = {extras = ["postgresql"], version = "^0.5.3"}
+SQLAlchemy = {extras = ["asyncio"], version = "^2.0.7"}
 toml = "^0.10.2"
 py-buzz = "^3.2.1"
 psycopg2 = "^2.9.5"
@@ -43,20 +42,11 @@ asgi-lifespan = "^1.0.1"
 black = "^22.3"
 alembic = "^1.6.5"
 mypy = "^0.910"
-sqlalchemy-stubs = "^0.4"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = "--random-order --cov=lm_backend --cov-report=term-missing --cov-fail-under=85"
 testpaths = ["tests"]
-env = [
-    "DATABASE_URL = sqlite:///sqlite-testing.db",
-    "LOG_LEVEL_SQL = ERROR",
-
-    # This setting must align with the rs256_domain fixture from armasec's pytest extension
-    "ARMASEC_DOMAIN = armasec.dev",
-    "ARMASEC_DEBUG = True",
-]
 
 [tool.black]
 line-length = 110
