--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,13 +10,13 @@ documentation = "https://omnivector-solutions.github.io/license-manager/"
 packages = [{ include = "lm_backend" }]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.9"
+python = "^3.11"
 fastapi = "^0.68.0"
 sentry-sdk = "^1.3.1"
 jwt = {version = "^1.2.0", optional = true}
 SQLAlchemy-Utils = "^0.37.8"
 loguru = "^0.5.3"
-asyncpg = "^0.24.0"
+asyncpg = "^0.27.0"
 uvicorn = "^0.15.0"
 python-dotenv = "^0.19.0"
 armasec = "^0.11"
