lots of tweaks :(

--- a/backend/Dockerfile-ci
+++ b/backend/Dockerfile-ci
@@ -1,20 +1,34 @@
-FROM python:3.8-slim-buster
+FROM ubuntu AS builder
+ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
-RUN apt update && apt install -y curl libpq-dev gcc
+RUN apt update \
+    && apt install python3.11-dev python3.11-venv curl libpq-dev gcc -y \
+    && curl -sSL https://bootstrap.pypa.io/get-pip.py | python3.11 - 
 
-RUN curl -sSL https://install.python-poetry.org | \
-    POETRY_HOME=/opt/poetry POETRY_VERSION=1.4.0 python && \
-    cd /usr/local/bin && \
-    ln -s /opt/poetry/bin/poetry && \
-    poetry config virtualenvs.create false
+RUN python3.11 -m venv /opt/venv --system-site-packages
+ENV PATH="/opt/venv/bin:$PATH"
 
-COPY ./pyproject.toml ./poetry.lock* /app/
-
-RUN poetry install --no-root
-
-COPY ./alembic /app/alembic
+COPY ./README.rst ./pyproject.toml ./poetry.lock* /app/
 COPY ./lm_backend /app/lm_backend
+
+RUN pip3 install . && pip3 install alembic
+
+
+FROM ubuntu AS runner
+WORKDIR /app/
+
+COPY --from=builder /opt/venv /opt/venv
+COPY --from=builder /usr/bin/python3.11 /usr/bin/
+COPY --from=builder /usr/lib/python3.11 /usr/lib/python3.11
+
+COPY --from=builder /lib/x86_64-linux-gnu/libexpat.so.1.8.7 /lib/x86_64-linux-gnu/libexpat.so.1
+
+
+COPY ./lm_backend /app/lm_backend
+COPY ./alembic /app/alembic
+
+ENV PATH="/opt/venv/bin:$PATH"
 
 CMD ["uvicorn", "lm_backend.main:app", "--host", "0.0.0.0", "--port", "80", "--loop", "asyncio"]
