--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -2,11 +2,13 @@ version: "3.9"
 services:
 
   postgres-back:
-    image: postgres
+    image: postgres:15.3-alpine
     environment:
-      POSTGRES_PASSWORD: 123
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: rats
+      POSTGRES_DB: rats
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-U", "postgres", "-h", "localhost"]
+      test: ["CMD", "sh", "-c", "pg_isready -U $$POSTGRES_USER -h $$(hostname -i)"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -22,7 +24,8 @@ services:
     volumes:
       - ./lm_backend:/app/lm_backend
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:123@postgres-back:5432/postgres}
+      #DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:123@postgres-back:5432/postgres}
+      DATABASE_URL: postgresql+asyncpg://postgres:rats@postgres-back:5432/rats
       ARMASEC_DOMAIN: ${ARMASEC_DOMAIN}
       ARMASEC_AUDIENCE: ${ARMASEC_AUDIENCE}
       ARMASEC_DEBUG: ${ARMASEC_DEBUG}
@@ -36,11 +39,11 @@ services:
       context: .
       dockerfile: ./Dockerfile-ci
     environment:
-      DATABASE_URL: postgresql+asyncpg://omnivector:rats@pgsql:5432/ratsdb
+      DATABASE_URL: postgresql+asyncpg://postgres:rats@pgsql:5432/ratsdb
       ARMASEC_DOMAIN: armasec.dev
       ARMASEC_AUDIENCE: https://armasec.dev
       LOG_LEVEL: DEBUG
-    command: poetry run pytest -s
+    command: pytest -s
     depends_on:
       pgsql:
         condition: service_healthy
@@ -54,25 +57,25 @@ services:
       context: .
       dockerfile: ./Dockerfile-ci
     environment:
-      DATABASE_URL: postgresql://omnivector:rats@pgsql:5432/ratsdb
+      DATABASE_URL: postgresql://postgres:rats@pgsql:5432/ratsdb
       ARMASEC_DOMAIN: armasec.dev
       ARMASEC_AUDIENCE: https://armasec.dev
       LOG_LEVEL: DEBUG
-    command: "poetry run python -m alembic -c alembic/alembic.ini upgrade head"
+    command: "alembic -c alembic/alembic.ini upgrade head"
     depends_on:
       pgsql:
         condition: service_healthy
 
   pgsql:
-    image: postgres:13-alpine
+    image: postgres:15.3-alpine
     environment:
-      POSTGRES_USER: omnivector
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: rats
       POSTGRES_DB: ratsdb
     ports: ["5432:5432"]
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: ["CMD", "sh", "-c", "pg_isready -U $$POSTGRES_USER -h $$(hostname -i)"]
       interval: 10s
       timeout: 5s
       retries: 5
