--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,6 +23,8 @@ COPY --from=builder /opt/venv /opt/venv
 COPY --from=builder /usr/bin/python3.11 /usr/bin/
 COPY --from=builder /usr/lib/python3.11 /usr/lib/python3.11
 
+COPY --from=builder /lib/x86_64-linux-gnu/libexpat.so.1.8.7 /lib/x86_64-linux-gnu/libexpat.so.1
+
 COPY ./lm_backend /app/lm_backend
 COPY ./alembic /app/alembic
 
