install dev-dependencies in Dockerfile-ci

--- a/backend/Dockerfile-ci
+++ b/backend/Dockerfile-ci
@@ -13,7 +13,7 @@ ENV PATH="/opt/venv/bin:$PATH"
 COPY ./README.rst ./pyproject.toml ./poetry.lock* /app/
 COPY ./lm_backend /app/lm_backend
 
-RUN pip3 install . && pip3 install alembic
+RUN pip3 install .[dev]
 
 
 FROM ubuntu AS runner
