--- a/backend/Makefile
+++ b/backend/Makefile
@@ -11,7 +11,7 @@ install:
 
 .PHONY: test
 test:
-	docker-compose buil migration
+	docker-compose build migration
 	docker-compose build unittest
 	docker-compose run --rm unittest
 
