PENG-1391 Fixup Makefile, compose, and added missing modules

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -43,7 +43,7 @@ publish:
 
 .PHONY: local
 local:
-	poetry run uvicorn --host 0.0.0.0 lm_backend.main:app --reload
+	docker-compose up --build license-manager
 
 # To include a message with the generated migration, set the MESSAGE variable in the make command:
 #   $ make db-migration MESSAGE="this migration applies foo to bar"
