--- a/docs-source/pyproject.toml
+++ b/docs-source/pyproject.toml
@@ -13,6 +13,7 @@ sphinxcontrib-httpdomain = "^1.8.0"
 sphinx-book-theme = "^0.2.0"
 toml = "^0.10.2"
 sphinx-copybutton = "^0.5.0"
+sphinxcontrib-mermaid = "^0.9.2"
 
 [tool.poetry.dev-dependencies]
 sphinx-view = "^0.3.1"
