--- a/.github/workflows/build_and_publish_docs.yaml
+++ b/.github/workflows/build_and_publish_docs.yaml
@@ -7,7 +7,7 @@ name: Build Sphinx documentation
 on:
   pull_request:
     paths:
-      - 'docs-source/**'
+      - 'docs/**'
     types:
       - closed
 jobs:
@@ -26,13 +26,13 @@ jobs:
       - name: Set up Poetry
         uses: Gr1N/setup-poetry@v8
 
-      - name: Build Sphinx documentation
+      - name: Build documentation
         run: |
-          cd docs-source
+          cd docs
           make docs
 
       - name: Deploy documentation
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
+          publish_dir: ./docs/site
