--- a/lm-cli/pyproject.toml
+++ b/lm-cli/pyproject.toml
@@ -4,7 +4,7 @@ version = "3.0.9"
 description = "License Manager CLI Client"
 authors = ["Omnivector Solutions <info@omnivector.solutions>"]
 license = "MIT"
-readme = "README.rst"
+readme = "README.md"
 repository = "https://github.com/omnivector-solutions/license-manager"
 documentation = "https://omnivector-solutions.github.io/license-manager/"
 packages = [ { include = "lm_cli" } ]
