--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "license-manager-backend"
-version = "3.0.9"
+version = "3.0.10a1"
 description = "Provides an API for managing license data"
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
@@ -12,7 +12,7 @@ packages = [{ include = "lm_backend" }]
 [tool.poetry.dependencies]
 python = ">=3.8,<3.9"
 fastapi = "^0.68.0"
-sentry-sdk = "^1.3.1"
+sentry-sdk = "1.18.0"
 jwt = {version = "^1.2.0", optional = true}
 SQLAlchemy-Utils = "^0.37.8"
 loguru = "^0.5.3"
