--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -10,31 +10,29 @@ documentation = "https://omnivector-solutions.github.io/license-manager/"
 packages = [{ include = "lm_agent" }]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.9"
+python = "^3.8.1"
 httpx = "^0.18.2"
 PyJWT = "^2.4.0"
-typer = "^0.3.2"
 pydantic = {version = "^1.8.2", extras = ["dotenv"]}
 requests = "^2.26.0"
 tabulate = "^0.8.9"
-boto3 = "^1.18.17"
 sentry-sdk = "^1.3.1"
 py-buzz = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
+black = "^22.3.0"
+isort = "^5.10.1"
+mypy = "^0.910"
+flake8 = "^6.1.0"
 pytest = "^6.2.4"
 pytest-asyncio = "^0.15.1"
 pytest-cov = "^2.12.1"
 pytest-env = "^0.6.2"
 respx = "^0.17.1"
-black = "^21.7b0"
-isort = "^5.9.3"
 pytest-random-order = "^1.0.4"
 pytest-sugar = "^0.9.4"
 pytest-freezegun = "^0.4.2"
-mypy = "^0.910"
 types-click = "^7.1.5"
-flake8 = "^3.9.2"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
