--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,7 @@ documentation = "https://omnivector-solutions.github.io/license-manager/"
 packages = [{ include = "lm_backend" }]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.9"
+python = "^3.8.1"
 fastapi = "^0.68.0"
 sentry-sdk = "1.18.0"
 jwt = {version = "^1.2.0", optional = true}
@@ -28,22 +28,22 @@ pydantic = {version = "^1", extras = ["email"]}
 inflection = "^0.5.1"
 
 [tool.poetry.group.dev.dependencies]
+black = "^22.3"
+isort = "^5.9.3"
+mypy = "^1.6"
+flake8 = "^6.1.0"
 pytest = "^6.2.4"
 pytest-asyncio = "^0.15.1"
 pytest-cov = "^2.12.1"
 pytest-env = "^0.6.2"
 pytest-freezegun = "^0.4.2"
 respx = "^0.20"
-flake8 = "^3.9.2"
-isort = "^5.9.3"
 pytest-random-order = "^1.0.4"
 pytest-sugar = "^0.9.4"
 aiosqlite = "^0.17.0"
 ipython = "^8.10.0"
 asgi-lifespan = "^1.0.1"
-black = "^22.3"
 alembic = "^1.6.5"
-mypy = "^1.6"
 types-aioboto3 = {extras = ["essential"], version = "^11.3.1"}
 
 [tool.pytest.ini_options]
