ASP-3288 Update CLI to install on Python 3.12

--- a/lm-cli/Makefile
+++ b/lm-cli/Makefile
@@ -15,7 +15,7 @@ test: install
 lint: install
 	poetry run black --check ${PACKAGE_NAME} tests
 	poetry run isort --check ${PACKAGE_NAME} tests
-	poetry run pflake8 ${PACKAGE_NAME} tests
+	poetry run flake8 ${PACKAGE_NAME} tests --max-line-length=120
 
 .PHONY: mypy
 mypy: install
