--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -20,10 +20,7 @@ sentry-sdk = "^1.3.1"
 py-buzz = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
-black = "^22.3.0"
-isort = "^5.10.1"
 mypy = "^0.910"
-flake8 = "^6.1.0"
 pytest = "^6.2.4"
 pytest-asyncio = "^0.15.1"
 pytest-cov = "^2.12.1"
@@ -32,6 +29,7 @@ respx = "^0.17.1"
 pytest-random-order = "^1.0.4"
 pytest-sugar = "^0.9.4"
 types-click = "^7.1.5"
+ruff = "^0.1.11"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -48,14 +46,8 @@ env = [
     "LM2_AGENT_LOG_LEVEL = DEBUG",
 ]
 
-[tool.black]
+[tool.ruff]
 line-length = 110
-
-[tool.isort]
-line_length = 110
-src_paths = ["lm_agent", "tests"]
-multi_line_output = 3
-include_trailing_comma = true
 
 [[tool.mypy.overrides]]
 module = [
