--- a/lm-api/Dockerfile-ci
+++ b/lm-api/Dockerfile-ci
@@ -3,14 +3,9 @@ FROM python:3.12-slim-bullseye
 WORKDIR /app
 
 RUN apt update && apt install -y curl libpq-dev gcc
+RUN pip install poetry==1.4.0
 
-RUN curl -sSL https://install.python-poetry.org | \
-    POETRY_HOME=/opt/poetry POETRY_VERSION=1.4.0 python && \
-    cd /usr/local/bin && \
-    ln -s /opt/poetry/bin/poetry && \
-    poetry config virtualenvs.create false
-
-COPY ./pyproject.toml ./poetry.lock* /app/
+COPY ./pyproject.toml ./poetry.lock /app/
 
 RUN poetry install --no-root
 
