--- a/lm-api/Dockerfile
+++ b/lm-api/Dockerfile
@@ -7,8 +7,9 @@ RUN pip install poetry==1.4.0
 
 COPY ./pyproject.toml ./poetry.lock /app
 
-RUN poetry config virtualenvs.in-project true && poetry install --no-root
-RUN poetry install --no-root --no-dev && rm -rf "$POETRY_CACHE_DIR"
+RUN poetry config virtualenvs.in-project true \
+    && poetry install --no-root --no-dev \
+    && rm -rf "$POETRY_CACHE_DIR"
 
 
 FROM python:3.12-slim-bullseye as runner
