[ASP-4601] Add Cluster Status to API (#349)
* [ASP-4601] Add pendulum as dependency

* ASP-4601 Add migration

* ASP-4601 Add new permissions

* ASP-4601 Create ClusterStatus model

* ASP-4601 Create ClusterStatusSchema

* ASP-4601 Create ClusterStatusCRUD

* ASP-4601 Create ClusterStatus routes

* ASP-4601 Add unit tests

* [ASP-4601] Remove left over comments

* ASP-4601 Add test extra to pendulum

* ASP-4601 Rename file for consistency

* ASP-4601 Remove left-over permission

* ASP-4601 Update unit test

* ASP-4601 Fix mypy issue

--- a/lm-api/pyproject.toml
+++ b/lm-api/pyproject.toml
@@ -27,6 +27,7 @@ psycopg2 = "^2.9.5"
 yarl = "^1.9.2"
 pydantic = {version = "^1", extras = ["email"]}
 inflection = "^0.5.1"
+pendulum = {extras = ["test"], version = "^3.0.0"}
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.6"
