--- a/lm-simulator/pyproject.toml
+++ b/lm-simulator/pyproject.toml
@@ -20,7 +20,7 @@ pytest-asyncio = "^0.15.1"
 pytest-cov = "^2.12.1"
 pytest-env = "^0.6.2"
 pytest-random-order = "^1.0.4"
-black = "^21.7b0"
+black = "^24.4.2"
 flake8 = "^3.9.2"
 isort = "^5.9.3"
 requests = "^2.26.0"
