[ASP-5023] Migrate lm-simulator to main license-manager repo (#354)
* ASP-5023 Migrate lm-simulator to License Manager repo

* ASP-5023 Update Makefile to include lm-simulator

* ASP-5023 Update GitHub Actions to publish both lm-api and lm-sim images

* ASP-5023 Update chech-prereqs script to include lm-sim

* ASP-5023 Update Black version on lm-sim

* ASP-5023 Add entry to CHANGELOG

* ASP-5023 Update .gitignore

* ASP-5023 Remove .DS_Store file

--- a/lm-simulator/.gitignore
+++ b/lm-simulator/.gitignore
@@ -1,22 +1,3 @@
-# License Manager specific stuff
-
-sqlite*.db
-function*.zip
-
-# MacOS specific stuff
-
-.DS_Store
-
-# OmniVector specific stuff
-
-.vscode
-*.code-workspace
-*.snap
-.idea/
-
-
-# Github's python.gitignore
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -104,7 +85,7 @@ ipython_config.py
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
-.python-version
+# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -124,7 +105,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-*.env
 .env
 .venv
 env/
@@ -156,3 +136,5 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+*.db
