--- a/lm-api/pyproject.toml
+++ b/lm-api/pyproject.toml
@@ -11,23 +11,24 @@ packages = [{ include = "lm_api" }]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = ">=0.68,<0.110"
+fastapi = "^0.111.0"
 sentry-sdk = "1.18.0"
 jwt = {version = "^1.2.0", optional = true}
 SQLAlchemy-Utils = "^0.37.8"
 loguru = "^0.5.3"
 asyncpg = "^0.28"
-uvicorn = "^0.15.0"
-python-dotenv = "^0.19.0"
-armasec = "^0.11"
+uvicorn = "^0.30.1"
+python-dotenv = "^0.21.0"
+armasec = "^2.0.1"
 SQLAlchemy = {extras = ["mypy"], version = "^2.0.22"}
 toml = "^0.10.2"
-py-buzz = "^3.2.1"
+py-buzz = "^4.1.0"
 psycopg2 = "^2.9.5"
 yarl = "^1.9.2"
-pydantic = {version = "^1", extras = ["email"]}
+pydantic = {version = "^2.7.3", extras = ["email"]}
 inflection = "^0.5.1"
 pendulum = {extras = ["test"], version = "^3.0.0"}
+pydantic-settings = "^2.3.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.6"
