--- a/lm-agent/pyproject.toml
+++ b/lm-agent/pyproject.toml
@@ -13,11 +13,12 @@ packages = [{ include = "lm_agent" }]
 python = "^3.12"
 httpx = "^0.18.2"
 PyJWT = "^2.4.0"
-pydantic = {version = "^1.8.2", extras = ["dotenv"]}
+pydantic = "^2.7.4"
 requests = "^2.26.0"
 tabulate = "^0.8.9"
 sentry-sdk = ">=1.3.1,<3.0.0"
 py-buzz = "^3.2.1"
+pydantic-settings = "^2.3.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
